<resources>
    <!--Main Resources-->
    <string name="app_name">LeaseOrRentHome Inc.</string>
    <string name="main_enter">Enter</string>
    <string name="submit">Submit</string>

    <!--Home Types Resources-->
    <string name="home_types_prompt">Select a Home Type:</string>
    <string name="apartment">Apartment</string>
    <string name="detached">Detached Home</string>
    <string name="semi_detached">Semi-detached Home</string>
    <string name="condo">Condominium Apartment</string>
    <string name="town_house">Town House</string>

    <!--Listing Resources-->
    <string name="price_text">Price:</string>
    <string name="address_text">Address:</string>
    <string name="bedrooms_text">Bedrooms:</string>
    <string name="bathrooms_text">Bathrooms:</string>
    <string name="checkout_text">Checkout</string>
    <string name="checkbox_listing_prompt">View</string>
    <string name="apartment_header">Apartments</string>
    <string name="detached_header">Detached Homes</string>
    <string name="semi_detached_header">Semi-detached Homes</string>
    <string name="condo_header">Condominium Apartments</string>
    <string name="town_house_header">Town Houses</string>

    <!--Checkout Resources-->
    <string name="select_radiobutton">Select</string>
    <string name="proceed_button">Proceed</string>
    
    <!--Payment Resources-->
    <string name="payment_prompt">Select Payment Type:</string>
    <string name="cash_radiobutton">Cash</string>
    <string name="credit_radiobutton">Credit Card</string>
    <string name="debit_radiobutton">Debit Card</string>
    <string name="pay_button">Pay</string>

    <!--Card Info Resources-->
    <string name="card_info_prompt">Enter Your Information:</string>
    <string name="fullname_text">Full Name:</string>
    <string name="card_number_text">Card/Debit Card Number:</string>
    <string name="question1_text">Favourite food:</string>
    <string name="question2_text">Favourite show:</string>
    <string name="question3_text">Favourite colour:</string>
    <string name="empty_fullname_input_alert">Please enter your name</string>
    <string name="empty_cardnumber_input_alert">Please enter a card number</string>
    <string name="empty_answer_alert">Please enter an answer</string>

    <!--Completion Resource-->
    <string name="payment_type_text">Payment Type:</string>
    <string name="completion_text">Thank you for your purchase!</string>

    <!--Home Info-->
    <!--Apartment Resources-->
    <string-array name="apartment_1">
        <item>$2,000</item>
        <item>96 Street Ave</item>
        <item>0</item>
        <item>1</item>
        <item>@drawable/apartment1</item>
    </string-array>
    <string-array name="apartment_2">
        <item>$3,500</item>
        <item>512 Long St.</item>
        <item>2</item>
        <item>1</item>
        <item>@drawable/apartment2</item>
    </string-array>
    <string-array name="apartment_3">
        <item>$2,300</item>
        <item>64 Road Ave</item>
        <item>1</item>
        <item>1</item>
        <item>@drawable/apartment3</item>
    </string-array>

    <!--Detached Home Resources -->
    <string-array name="detached_home_1">
        <item>$6,800</item>
        <item>342 Avenue Rd</item>
        <item>3</item>
        <item>2</item>
        <item>@drawable/detached1</item>
    </string-array>
    <string-array name="detached_home_2">
        <item>$4,300</item>
        <item>346 Street Cr</item>
        <item>2</item>
        <item>1</item>
        <item>@drawable/detached2</item>
    </string-array>
    <string-array name="detached_home_3">
        <item>$8,500</item>
        <item>785 Crescent Dr</item>
        <item>4</item>
        <item>1</item>
        <item>@drawable/detached3</item>
    </string-array>

    <!--Semi-Detached Home Resources-->
    <string-array name="semi_detached_1">
        <item>$3,900</item>
        <item>864 Avenue St</item>
        <item>2</item>
        <item>1</item>
        <item>@drawable/semidetached1</item>
    </string-array>
    <string-array name="semi_detached_2">
        <item>$5,600</item>
        <item>74 Crescent St</item>
        <item>3</item>
        <item>1</item>
        <item>@drawable/semidetached2</item>
    </string-array>
    <string-array name="semi_detached_3">
        <item>$4,500</item>
        <item>746 Long Dr</item>
        <item>2</item>
        <item>2</item>
        <item>@drawable/semidetached3</item>
    </string-array>

    <!--Condominium Apartment Resources-->
    <string-array name="condo_1">
        <item>$4,000</item>
        <item>54 Road St</item>
        <item>2</item>
        <item>1</item>
        <item>@drawable/condo1</item>
    </string-array>
    <string-array name="condo_2">
        <item>$5,700</item>
        <item>635 Avenue Sq</item>
        <item>3</item>
        <item>1</item>
        <item>@drawable/condo2</item>
    </string-array>
    <string-array name="condo_3">
        <item>$2,900</item>
        <item>7 Street Blvd</item>
        <item>1</item>
        <item>1</item>
        <item>@drawable/condo3</item>
    </string-array>

    <!--Town Houses Resources-->
    <string-array name="town_house_1">
        <item>$6,300</item>
        <item>89 Square Dr</item>
        <item>3</item>
        <item>1</item>
        <item>@drawable/townhouse1</item>
    </string-array>
    <string-array name="town_house_2">
        <item>$8,700</item>
        <item>456 Queen Ave</item>
        <item>4</item>
        <item>2</item>
        <item>@drawable/townhouse2</item>
    </string-array>
    <string-array name="town_house_3">
        <item>$7,100</item>
        <item>896 King Blvd</item>
        <item>3</item>
        <item>2</item>
        <item>@drawable/townhouse3</item>
    </string-array>
</resources>