<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioPaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197">

        <TextView
            android:id="@+id/txtPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_prompt"
            android:textSize="@dimen/textbox_Header_font_size" />

        <RadioButton
            android:id="@+id/radioCash"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/cash_radiobutton" />

        <RadioButton
            android:id="@+id/radioCreditCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/credit_radiobutton" />

        <RadioButton
            android:id="@+id/radioDebitCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/debit_radiobutton" />

        <Button
            android:id="@+id/btnPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/pay_button" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>