<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/selectedListing"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/lightgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSelectedListing"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_image_height" />

            <TableLayout
                android:id="@+id/tblSelectedListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_side_padding"
                android:paddingRight="@dimen/table_side_padding">

                <TableRow
                    android:layout_width="@dimen/tablerow_width"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSelectedPrice"
                        android:layout_width="@dimen/textbox_info_width"
                        android:layout_height="wrap_content"
                        android:text="@string/price_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtChosenPrice"
                        android:layout_width="@dimen/textbox_listing_info_width"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSelectedAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtChosenAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSelectedBedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bedrooms_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtChosenBedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSelectedBathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bathrooms_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtChosenBathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="317dp"
        android:layout_height="116dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCompletion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedListing">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPaymentTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_type_text" />

            <TextView
                android:id="@+id/txtPaymentType"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtFullNameText"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:text="@string/fullname_text" />

            <TextView
                android:id="@+id/txtFullNameComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCardNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number_text" />

            <TextView
                android:id="@+id/txtCardNumberCompletion"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtQuestion1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_text" />

            <TextView
                android:id="@+id/txtAnswerCompletion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtQuestion2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_text" />

            <TextView
                android:id="@+id/txtAnswer2Completion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtQuestion3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_text" />

            <TextView
                android:id="@+id/txtAnswer3Completion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtCompletion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/completion_text"
        android:textSize="@dimen/textbox_Header_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>