<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="373dp"
        android:layout_height="667dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="414dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname_text"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFullName"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="204dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="350dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCardNumber"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:text="@string/card_number_text"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtInputNumber"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtQuestion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_text"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="201dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_text"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputAnswer2"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="199dp"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_text"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputAnswer3"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="201dp"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>