<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardListing"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/card_margin_top_bottom"
        android:layout_marginBottom="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgListing"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_image_height" />

            <TableLayout
                android:id="@+id/tblListing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_side_padding"
                android:paddingRight="@dimen/table_side_padding">

                <TableRow
                    android:layout_width="@dimen/tablerow_width"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtListingPrice"
                        android:layout_width="@dimen/textbox_info_width"
                        android:layout_height="wrap_content"
                        android:text="@string/price_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="@dimen/textbox_listing_info_width"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtListingAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtListingBedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bedrooms_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtBedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtListingBathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bathrooms_text"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtBathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>

            <RadioButton
                android:id="@+id/btnListing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_button" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>